# qy

./: .gitignore  CMakeLists.txt  Cargo.toml  NativeQyModule.g4  README.md  build-grammar.bat  build-grammar.sh  clean-parser.bat  clean-parser.sh  log.txt  qbert  qbert.cmd  qbert_log  qbt  qbt.cmd  qbt.py  qbt_log  qc  qc.bat  qc.cmd  qc.py  qc_log  qc_profile_data.pstats  qy.code-workspace  requirements.lock.txt  requirements.txt  setup.bat  setup.py  setup.sh  test_qc
concept/: 001 - Changes.md
dev/: .gitignore
doc/: 001 - Plan v1.md  001 - Tutorial-v1.md  001-Pitch.md  001-Pitch1.md  001.Manual-p2.md  001.Manual.md  002 - CompilerSpec-v1.md  002-Pitch2.md  002.Implementation.md  003-Pitch3.md  003-RawIdeas.md  003.Proposal_SqBrkLambda.md  004 - Modules.md  004-Pitch2.md  004-Pitch4.md  004.Proposal_FnSes.md  Pitch.md  Qy.g4  pitch.md  rambles-pt1-base.md  rambles-pt2-modules.md  rambles-pt2.md  rambles-pt3-compiler.ipynb  rambles-pt3.ipynb  rambles-pt4-qrfis.md  rambles-pt4.md  rambles-pt5-next_steps.md  rambles.md
doc/.ipynb_checkpoints/: rambles-pt3-checkpoint.ipynb
doc/001.ideation/: rambles-pt1-base.md  rambles-pt5-next_steps.md
doc/002.review-1/: 002.review-1.intro.md  003.review-2.gc.md  004.review-3.ux.md
doc/003.review-2/: 001.feedback.md
doc/005.ThatTimeILearnedScala/: 005.Proposal_Overhaul1.md  006.Overhaul2.md  007.Overhaul3.md  008.Overhaul4.md  009.Overhaul5.md  010.Overhaul6.md  011.Overhaul7.md  012.Conclusion.md
doc/006.LiquidOverhaul/: 006.Overhaul_LiquidTypes.md
doc/007.Overhaul3/: 007.Overhaul3-base.md  007.Overhaul3.md  008.Overhaul3-fix.md
doc/quintessential-qy/: 000-understanding_the_machine.md  001-setup.md  002-arithmetic.md  003-control_flow.md  004-functions.md  005-closures.md  006-types_and_adts.md  007-mutation.md  008-packages.md  009-builtins.md  010-methods_and_interfaces.md  011-large_programs_and_boxing.md  012-c_interop.md  013-macros.md  014-conclusion.md  README.md
doc/v1/: 001-Pitch.md  002-Packages.md  004-Pitch2.md
doc/v2/: 001-Pitch.md
eg/: README.md  eg101-basics.qy  eg102-literals.qy  eg104-fib.qy  eg106-qsltest1.qy  eg401-ctor_typing.qy  eg403-consts.qy  sandbox-ss1.qyp.jsonc  sandbox-ss2.qyp.jsonc  sandbox-ss6.qyp.jsonc  sandbox-ss7.qyp.jsonc
eg/debug/: eg101-basics.qy  eg102-literals.qy  eg104-fib.qy  eg106-qsltest1.qy  eg199-scratch1.qy  eg401-ctor_typing.qy  eg402-scoping.qy  eg403-consts.qy  eg404-ite-bug1.qy  qsltest1.qyp.jsonc  sandbox-ss1.qyp.jsonc  sandbox-ss3.qyp.jsonc  (+3 more)
grammars/: .gitignore  Q4SourceFile.g4  QySourceFile.g4
news/: 001 - Qy.md  002 - Slices, Arrays, Pointers.md  004 - Effects Specifiers.md  005 - Language WIP.md  005 - WIP.md  006 - Code WIP.md  007 - Cast Exp.md
qc-build/: import-test-1.cpp  import-test-2.cpp  import-test-2.hpp  sandbox.cpp  sandbox.hpp
qcl/: __init__.py  ast1.py  ast2.py  base_emitter.py  c_parser.py  cli.py  common.py  config.py  constants.py  cpp_emitter.py  cpp_emitter_v1.py  cpp_emitter_v2.py  feedback.py  interp.py  main.py  pair.py  panic.py  parser.py  platform.py  qy_parser.py  scheme.py  settings.py  source.py  typer.py  types.py  types_test.py
qcl/monomorphizer/: .gitignore  CMakeLists.txt  README.md  __init__.py  basic_checks.py  copier.py  copier.pyx  logic_checks.py  mast.cp39-win_amd64.pyd  mast.cpp  mast.pyx  nexus.pyx  setup.py  wrapper.pxd  wrapper.pyx
qcl/monomorphizer/extension/: arg-list.cc  arg-list.hh  defs.cc  defs.hh  eval.cc  eval.hh  gdef.cc  gdef.hh  id-defs.hh  id-gdef.hh  id-mast.hh  id-modules.hh  id-mtype.hh  id-mval.hh  id-vcell.hh  intern.cc  intern.hh  mast.cc  mast.hh  modules.cc  modules.hh  mtype.cc  mtype.hh  mval.cc  mval.hh  panic.hh  printing.cc  shared-enums.hh  stack.cc  stack.hh  sub.cc  sub.hh  vcell.cc  vcell.hh
qsl/: README.md  qsl.qyp.jsonc
qy-build/: README.md
qyl/: README.md
sandbox/: README.md  eg000.qlib  eg001.qlib  eg001.qy  eg001.qy4  eg002.qlib  eg01-scratch.qy  eg02-literals.qy  eg1-basics.qy  eg1.q3  eg1.qy  eg1.qy3  eg101-basics.qy  eg101.q4  eg101.qy4  eg102-literals.qy  eg103-vars.qy  eg104-arrays.qy  eg104-fib.qy  eg105-macro.qy  eg106-qsltest.qy  eg199-scratch.qy  eg199-scratch1.qy  eg2-literals.qy  eg201.qy4  eg202.qy4  eg21-basics.qy  eg210.qy4  eg3-qrfi-p4.qy  eg401-ctor_typing.qy  eg402-scoping.qy  eg404-ite-bug.qy  eg405-ite-bug2.qy  sandbox-ss1.qyp.json  sandbox-ss1.qyp.jsonc  sandbox-ss2.qyp.json  sandbox-ss3.qyp.json  sandbox-ss3.qyp.jsonc  sandbox-ss4.qyp.jsonc  sandbox-ss5.qyp.jsonc  (+36 more)
scripts/: build-grammar.bat  build-grammar.sh  clean-parser.bat  config.sh  eg.matmul.run.sh  parser.clean.bat  parser.clean.sh  parser.generate.bat  parser.generate.sh  python.setup.sh  setup.001-antlr_build.ps1  setup.001-antlr_build.sh  setup.sh  test.sh
src/: compiler.rs  error.rs  fb.rs  intern.rs  main.rs  qy3.pest  src.rs  tune.rs
test/: lexer_test_01.txt
v1/: README.md  qc.py  qy.code-workspace  setup.bat  setup.sh
(+381 files in other folders)
